2006-03-05 Mathieu Blondel <mblondel@cvs.gnome.org>

    * Made Ruby/Gettext optional

2006-02-19 Mathieu Blondel <mblondel@cvs.gnome.org>

    * Some fixes to allow Fantasdic run under Windows
    * Some UI tweaks (glade files) (John Spray)
    * release 1.0-beta1.1

2006-02-17 Mathieu Blondel <mblondel@cvs.gnome.org>

    * release 1.0-beta1