@@ -1,3 +1,7 @@
+2006-03-09 Mathieu Blondel <mblondel@cvs.gnome.org>
+
+    * po/Makefile: choose the ruby interpreter to run rgettext
+
 2006-03-05 Mathieu Blondel <mblondel@cvs.gnome.org>
 
     * Made Ruby/Gettext optional
